--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,6 @@
 <body>
     <h1> Hola mundo</h1>
 
-    <p>hoy hablaremos de su vida </p>
+    <p>hoy hablaremos de su vida y su obra maestra </p>
 </body>
 </html>
