commit al master del blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="css/estilos.css"/>
 </head>
 <body>
-    <h1> Hola mundo</h1>
+    <div id = "container">
+    <div id = "post"> 
+ 
+    <h1> Domotica Dc Domotica para todos</h1>
 
-    <p>hoy hablaremos de su vida y su obra maestra </p>
+    <p>este es mi nuevo proyecto de git  git hub </p>
+    </div>
+    </div>
 </body>
 </html>
