--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,7 @@
     <h1> Domotica Dc Domotica para todos</h1>
 
     <p>este es mi nuevo proyecto de git  git hub </p>
+    <p>este un nuevo parrafo adicional </p>
     </div>
     </div>
 </body>
