agragado el contenido adicional del blog v2

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
     <h1> Domotica Dc Domotica para todos</h1>
 
     <p>este es mi nuevo proyecto de git  git hub </p>
-    <p>este un nuevo parrafo adicional </p>
+    <p>este un nuevo parrafo </p>
     </div>
     </div>
 </body>
