modifique el cololr a verde y agregegue subcrip

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
 
     <p>este es mi nuevo proyecto de git  git hub </p>
     <p>este un nuevo parrafo </p>
+    <p>suscribete </p>
     </div>
     </div>
 </body>
