cambie el supcripcion
porque quiero

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
 
     <p>este es mi nuevo proyecto de git  git hub </p>
     <p>este un nuevo parrafo </p>
-    <p>suscribete </p>
+    <p>suscribete a domotica dc.com </p>
     </div>
     </div>
 </body>
