porque quiero prueba

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,8 @@
 
     <p>este es mi nuevo proyecto de git  git hub </p>
     <p>este un nuevo parrafo </p>
-    <p>suscribete a domotica dc.com </p>
+    <p>suscribete a domotica dc.com
+        le agregue esto para probar </p>
     </div>
     </div>
 </body>
