--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id = "container">
-    <div id = "Cabecera">bienvenidos a hiperblogs</div>
+    <div id = "Cabecera">bienvenidos master</div>
     <div id = "post"> 
  
     <h1> Domotica Dc Domotica para todos</h1>
