--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
     <div id = "Cabecera">bienvenidos master</div>
     <div id = "post"> 
  
-    <h1> Domotica Dc Domotica para todos</h1>
+    <h1> Domótica Dc increeible para todos</h1>
 
     <p>este es mi nuevo proyecto de git  git hub </p>
     <p>este un nuevo parrafo </p>
